--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora 1.0 |||</title>
-    <link rel="icon" href="/img/calculator-solid.ico">
-    <script defer src="js/app.js"></script>
-    <link  rel="stylesheet" href="css/app.css" >
+    <link rel="icon" href="calculator-solid.ico">
+    <script defer src="app.js"></script>
+    <link  rel="stylesheet" href="app.css" >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/d514645d85.js" crossorigin="anonymous"></script>
